# engine

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
app/: config.py  constants.py  main.py
app/data/: supplier_data_example.json  supplier_data_example.jsonc
app/data/events/: get_network_actions.json  get_network_predictions.json  update_network.json
app/engine/: agent.py  environment.py
app/engine/models/: environment.pkl  supply_chain_environment.pkl
app/environments/: engine.py
app/schemas/: action.py  engine.py
app/utils/: engine.py  network.py  websocket.py  websockets.py
