[project]
name = "engine"
version = "0.1.0"
description = "This repository exposes workflow agent environment via websockets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.9",
    "gymnasium>=1.1.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
